2006-04-21  Gabor Csardi  <csardi@kzoo.edu>

	* src/attributes.c (igraph_i_attribute_delete_vertices) : use two
	index vectors, one for vertex, one for edge indexes
	* src/type_indexededgelist.c (igraph_empty, igraph_add_vertices)
	(igraph_delete_edges, igraph_delete_vertices)

2006-04-20  Gabor Csardi  <csardi@kzoo.edu>

	* src/attributes.c (igraph_i_attribute_init)
	(igraph_i_attribute_destroy, igraph_i_attribute_copy)
	(igraph_i_attribute_add_vertices, igraph_i_attribute_delete_vertices)
	(igraph_i_attribute_add_edges, igraph_i_attribute_delete_edges)
	(igraph_i_attribute_table, igraph_i_set_attribute_table) : added,
	all the original functions deleted
	* src/type_indexededgelist.c (igraph_empty, igraph_destroy)
	(igraph_copy, igraph_add_edges, igraph_add_vertices)
	(igraph_delete_edges, igraph_delete_vertices) : updated for new
	attribute handling
	* src/foreign.c (igraph_read_graph_ncol, igraph_read_graph_lgl)
	(igraph_write_graph_ncol, igraph_write_graph_lgl) : attribute 
	support temporarily removed
	* examples/simple/igraph_write_graph_lgl.c : removed
	attribute-dependent error handling test
	* examples/simple/igraph_decompose.c : removed attribute-dependent
	test case
	
2006-04-12  Tamas Nepusz  <ntamas@rmki.kfki.hu>

	* almost everywhere : added igraph_ prefix to integer_t,
	real_t and bool_t
	
2006-04-11  Tamas Nepusz  <ntamas@rmki.kfki.hu>

	* src/layout.c (igraph_layout_reingold_tilford) : added
	* src/igraph.h (igraph_layout_reingold_tilford) : added
	* tests/layout.at : added test case for Reingold-Tilford layout
	* interfaces/python/test.py : added test case for
	Reingold-Tilford layout
	
	* configure.in : even better OS X compatibility :)	
	* interfaces/python/*.[ch] : declared type objects as extern
	where needed (so ld won't complain under OS X)
	* interfaces/python/test.sh, tests/testsuite.at :
	added DYLD_LIBRARY_PATH

	* src/foreign-lgl-lexer.l, src/foreign-ncol-lexer.l :
	made line counter static

2006-04-10  Gabor Csardi  <csardi@kzoo.edu>
