@@ -10,6 +10,11 @@
 	written properly (?)
 	(R_SEXP_to_igraph, R_SEXP_to_igraph_copy, R_igraph_to_SEXP) : updated
 
+	* interfaces/R/src/rinterface.c (R_igraph_attribute_delete_edges)
+	(R_igraph_attribute_delete_vertices) : updated for new 
+	igraph_i_attribute_delete_edges and 
+	igraph_i_attribute_delete_vertices semantics
+
 2006-04-20  Gabor Csardi  <csardi@kzoo.edu>
 
 	* interfaces/R/igraph/R/attributes.R (add.graph.attribute)
